<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editMovie.EditMovieActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rootEditMovie"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarEditMovie"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="Sửa thông tin phim"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:subtitleTextColor="#fff"
                app:titleTextColor="#fff" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbarCreateMovie"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imvCinemaEdit"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_picture"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Button
                    android:id="@+id/btnSPEdit"
                    style="@style/ButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_shape"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/select_photo"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imvCinemaEdit" />

                <TextView
                    style="@style/TextViewPrimary"
                    android:id="@+id/tvMovie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/movie"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSPEdit" />

                <EditText
                    style="@style/EditTextPrimary"
                    android:id="@+id/edtMovieEdit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_editext"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovie"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <TextView
                    style="@style/TextViewPrimary"
                    android:id="@+id/tvGenreMovie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtMovieEdit" />

                <Spinner
                    android:id="@+id/spGenreMovieEdit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:entries="@array/array_genre"
                    android:background="@drawable/rounded_editext"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvGenreMovie"/>

                <TextView
                    style="@style/TextViewPrimary"
                    android:id="@+id/tvOpeningDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opening_day"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spGenreMovieEdit" />

                <EditText
                    style="@style/EditTextPrimary"
                    android:id="@+id/edtDayEdit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_editext"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvOpeningDay" />

                <TextView
                    style="@style/TextViewPrimary"
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtDayEdit" />

                <EditText
                    style="@style/EditTextPrimary"
                    android:id="@+id/edtDesEdit"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:maxLines="5"
                    android:scrollbars="vertical"
                    android:background="@drawable/rounded_editext"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    android:inputType="text|textMultiLine"
                    android:singleLine="true"
                    tools:ignore="LabelFor" />

                <Button
                    style="@style/ButtonPrimary"
                    android:id="@+id/btnCMovieEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sửa phim"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/button_shape"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtDesEdit" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>